upgrade strictness and fix code to match - also fix bug I introduced in server

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,6 +2,13 @@
   "compilerOptions": {
     "module": "commonjs",
     "target": "esnext",
-    "sourceMap": true
+    "sourceMap": true,
+    "strict": true,
+    "baseUrl": ".",
+    "paths": {
+    "*": [
+        "node_modules/*"
+    ]
+}
   }
 }
